BPER/DEVF/force-app/main/default/objects/CRM_PianoRateale__c/CRM_PianoRateale__c.object-meta.xml
<CustomObject>
    <description>Piani Rateali collegati al Financial Account</description>
    <label>Piano Rateale</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Numero Piano</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Piani Rateali</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>