BPER/DEVF/force-app/main/default/objects/CRM_PianoRateale__c/fields/CRM_Abi__c.field-meta.xml
<CustomField>
    <fullName>CRM_Abi__c</fullName>
    <description>Formula ABI</description>
    <formula>CRM_FinancialAccount__r.FinServ__PrimaryOwner__r.FinServ__BankNumber__c</formula>
    <label>ABI</label>
    <type>Text</type>
</CustomField>