BPER/DEVF/force-app/main/default/objects/CRM_PianoRateale__c/fields/CRM_CanaleDiAttivazione__c.field-meta.xml
<CustomField>
    <fullName>CRM_CanaleDiAttivazione__c</fullName>
    <description>DWH: CANALE_ATTIVAZIONE_CD</description>
    <label>Canale di Attivazione</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>App</fullName>
            </value>
            <value>
                <fullName>Contact Center</fullName>
            </value>
            <value>
                <fullName>Filiale</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>