BPER/DEVF/force-app/main/default/objects/CRM_PianoRateale__c/fields/CRM_DataAttivazione__c.field-meta.xml
<CustomField>
    <fullName>CRM_DataAttivazione__c</fullName>
    <description>DWH: PIANO_ATTIVAZIONE_DT</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Data di attivazione del piano rateale</inlineHelpText>
    <label>Data Attivazione</label>
    <type>Date</type>
</CustomField>