BPER/DEVF/force-app/main/default/objects/CRM_PianoRateale__c/fields/CRM_DataScadenza__c.field-meta.xml
<CustomField>
    <fullName>CRM_DataScadenza__c</fullName>
    <description>DWH: PIANO_SCADENZA_DT</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Data di scadenza relativa all&apos;ultima rata che compone il piano rateale</inlineHelpText>
    <label>Data Scadenza</label>
    <type>Date</type>
</CustomField>