BPER/DEVF/force-app/main/default/objects/CRM_PianoRateale__c/fields/CRM_DataUltimoPagamentoRata__c.field-meta.xml
<CustomField>
    <fullName>CRM_DataUltimoPagamentoRata__c</fullName>
    <description>DWH: ULTIMO_PAGAMENTO_DT</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Data relativa all&apos;ultima rata pagata</inlineHelpText>
    <label>Data Ultimo Pagamento Rata</label>
    <type>Date</type>
</CustomField>