BPER/DEVF/force-app/main/default/objects/CRM_PianoRateale__c/fields/CRM_Durata__c.field-meta.xml
<CustomField>
    <fullName>CRM_Durata__c</fullName>
    <description>DWH: DURATA_MESI_QT</description>
    <label>Durata (in mesi)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>