BPER/DEVF/force-app/main/default/objects/CRM_PianoRateale__c/fields/CRM_FinancialAccount__c.field-meta.xml
<CustomField>
    <fullName>CRM_FinancialAccount__c</fullName>
    <description>DWH: NM_RAPPORTO_CD</description>
    <label>Financial Account</label>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>Piani Rateali</relationshipLabel>
    <relationshipName>CRM_PianiRateali</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>