BPER/DEVF/force-app/main/default/objects/CRM_PianoRateale__c/fields/CRM_ImportoPianoRateale__c.field-meta.xml
<CustomField>
    <fullName>CRM_ImportoPianoRateale__c</fullName>
    <description>DWH: IMPORTO_ORIGINALE_AM</description>
    <label>Importo Piano Rateale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>