BPER/DEVF/force-app/main/default/objects/CRM_PianoRateale__c/fields/CRM_ImportoResiduo__c.field-meta.xml
<CustomField>
    <fullName>CRM_ImportoResiduo__c</fullName>
    <description>DWH: IMPORTO_RESIDUO_AM</description>
    <inlineHelpText>Somma degli importi delle rate da pagare</inlineHelpText>
    <label>Importo Residuo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>