BPER/DEVF/force-app/main/default/objects/CRM_PianoRateale__c/fields/CRM_LastCallWsDettaglioPianoRateale__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastCallWsDettaglioPianoRateale__c</fullName>
    <description>Usato per determinare il timestamp dell&apos;ultima chiamata al servizio</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Indica l&apos;ultimo aggiornamento via webservice</inlineHelpText>
    <label>Last Call WS dettaglioPianoRateale</label>
    <type>DateTime</type>
</CustomField>