BPER/DEVF/force-app/main/default/objects/CRM_PianoRateale__c/fields/CRM_NumeroRate__c.field-meta.xml
<CustomField>
    <fullName>CRM_NumeroRate__c</fullName>
    <inlineHelpText>Numero rate che compongono il piano</inlineHelpText>
    <label>Numero Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>