BPER/DEVF/force-app/main/default/objects/CRM_PianoRateale__c/fields/CRM_Rata__c.field-meta.xml
<CustomField>
    <fullName>CRM_Rata__c</fullName>
    <description>DWH: RATA_AM</description>
    <label>Rata</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>