BPER/DEVF/force-app/main/default/objects/CRM_PianoRateale__c/fields/CRM_RatePagate__c.field-meta.xml
<CustomField>
    <fullName>CRM_RatePagate__c</fullName>
    <description>DWH: RATE_PAGATE_CD</description>
    <inlineHelpText>Numero di rate pagate che compongono il piano</inlineHelpText>
    <label>Rate Pagate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>