BPER/DEVF/force-app/main/default/objects/CRM_PianoRateale__c/fields/CRM_RateScadute__c.field-meta.xml
<CustomField>
    <fullName>CRM_RateScadute__c</fullName>
    <inlineHelpText>Numero di rate scadute ad oggi che compongono il piano</inlineHelpText>
    <label>Rate Scadute</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>