BPER/DEVF/force-app/main/default/objects/CRM_PianoRateale__c/fields/CRM_Stato__c.field-meta.xml
<CustomField>
    <fullName>CRM_Stato__c</fullName>
    <description>DWH: STATO_PIANO_CD</description>
    <label>Stato</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attivo</fullName>
            </value>
            <value>
                <fullName>Estinto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>