BPER/DEVF/force-app/main/default/objects/CRM_PianoRateale__c/fields/CRM_TotaleCommissionePiano__c.field-meta.xml
<CustomField>
    <fullName>CRM_TotaleCommissionePiano__c</fullName>
    <description>DWH: COMMISSIONI_INCASSO_AM</description>
    <inlineHelpText>Somma delle commissioni di tutte le rate che compongono il piano</inlineHelpText>
    <label>Totale Commissione Piano</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>